--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsPersonal4511</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+    <title>Lucas Altman</title>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= csrf_meta_tags %>
+    <%= favicon_link_tag 'la.ico' %>
 </head>
 <body>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="http://github.com/lucasaltman/rails_personal_4511">Personal Rails App Project</a>
+        </div>
+        <div class="navbar-collapse collapse" data-no-turbolink>
+            <ul class="nav navbar-nav">
+                <li><%= link_to 'Blog', blog_path %></li>
+                <li><%= link_to 'Design Examples', designs_path %></li>
+                <li><%= link_to 'Code Examples', code_path %></li>
+                <li><%= link_to 'Contact Me', contact_path %></li>
+                <!-- Left in in case of desired further expansion
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Nav header</li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+                -->
+            </ul>
+            <p class="navbar-text navbar-right">Created by Mike Kalvas</p>
+        </div><!--/.nav-collapse -->
+    </div>
+</div>
 
-<%= yield %>
+<div class="container"> <%= yield %> </div>
 
 </body>
 </html>
