Hey the navbar works now
Used bootstrap helper to actually make a navbar that worked this time.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,42 +8,15 @@
     <%= favicon_link_tag 'la.ico' %>
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="http://github.com/lucasaltman/rails_personal_4511">Personal Rails App Project</a>
-        </div>
-        <div class="navbar-collapse collapse" data-no-turbolink>
-            <ul class="nav navbar-nav">
-                <li><%= link_to 'Blog', blog_path %></li>
-                <li><%= link_to 'Design Examples', designs_path %></li>
-                <li><%= link_to 'Code Examples', code_path %></li>
-                <li><%= link_to 'Contact Me', contact_path %></li>
-                <!-- Left in in case of desired further expansion
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-                -->
-            </ul>
-            <p class="navbar-text navbar-right">Created by Mike Kalvas</p>
-        </div><!--/.nav-collapse -->
-    </div>
-</div>
+
+<%= nav_bar :static => :top, :brand => "Lucas Altman" do %>
+    <%= menu_group do %>
+        <%= menu_item "Home", root_path %>
+        <%= menu_item "Design Examples", designs_path %>
+        <%= menu_item "Code Examples", code_path %>
+        <%= menu_item "Contact", contact_path %>
+    <% end %>
+<% end %>
 
 <div class="container"> <%= yield %> </div>
 
